manifests/base/resources/nl-broker/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "30301"
    prometheus.io/scrape: "true"
  labels:
    app: nl-broker
    chart: nl-broker-1.2.0
    heritage: Helm
    release: nl-broker
  name: nl-broker
spec:
  ports:
  - name: nl-broker
    port: 30301
    protocol: TCP
    targetPort: 30301
  selector:
    app: nl-broker
    release: nl-broker
  type: ClusterIP
---
