manifests/base/resources/nl-broker/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://nl-broker-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
  labels:
    app: nl-broker
    chart: nl-broker-1.2.0
    heritage: Helm
    release: nl-broker
  name: nl-broker
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nl-broker
          servicePort: 30301
        path: /api/v1/sentences
---
